React Awesome Slider | Sass and Less Comparison

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -328,6 +328,22 @@
         <div id="css"></div>
       </li> 
 
+      <li>
+        <a href="https://github.com/rcaferati/react-awesome-slider?fbclid=IwAR13-s76qtkRInWr58Rq7P1bGapbkbwCe6F11i7r1Oa-U5TWiphOUZqdIiI" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/rcaferati/react-awesome-slider?fbclid=IwAR13-s76qtkRInWr58Rq7P1bGapbkbwCe6F11i7r1Oa-U5TWiphOUZqdIiI" target="_blank">React Awesome Slider</a>
+          </h2>
+          <p>Slider Animado</p>
+        </div>
+        <a class="resource-button" href="https://github.com/rcaferati/react-awesome-slider?fbclid=IwAR13-s76qtkRInWr58Rq7P1bGapbkbwCe6F11i7r1Oa-U5TWiphOUZqdIiI" target="_blank">Veja</a>
+        <div id="css"></div>
+      </li> 
+
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">CSS</h2>
       <div class="linha"></div>      
@@ -405,7 +421,22 @@
           </h2>
           <p>Wiki no Github</p>
         </div>
-        <a class="resource-button" href="https://github.com/stubbornella/oocss/wiki" target="_blank">Veja</a>
+        <a class="resource-button" href="https://github.com/stubbornella/oocss/wiki" target="_blank">Veja</a>        
+      </li>
+
+      <li>
+        <a href="https://gist.github.com/chriseppstein/674726" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://gist.github.com/chriseppstein/674726" target="_blank">Sass and Less Comparison</a>
+          </h2>
+          <p>Comparação entre Sass e Less</p>
+        </div>
+        <a class="resource-button" href="https://gist.github.com/chriseppstein/674726" target="_blank">Veja</a>
         <div id="bibliotecas"></div>
       </li>
 
@@ -2045,7 +2076,7 @@
           <p>Dados sobre o Javascript</p>
         </div>
         <a class="resource-button" href="https://stateofjs.com/" target="_blank">Veja</a>
-        <div id="accessibilidade"></div>
+        <div id="acessibilidade"></div>
       </li>
 
       <div class="linha"></div>
