--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1247,8 +1247,7 @@
 					<h2> <a href="http://www.vectorportal.com/" target="_blank">Brands of the New World</a> </h2>
 					<p>Graphics</p>
 				</div>
-				<a class="resource-button" href="http://www.vectorportal.com/" target="_blank">Veja</a>
-				<div id="mockups"></div>
+				<a class="resource-button" href="http://www.vectorportal.com/" target="_blank">Veja</a>				
 			</li>
 
 			<li>
@@ -1346,8 +1345,7 @@
 					<h2> <a href="https://mega.nz/#F!uZZ12I7Z!g9TtOZrFAy5pZ_z6Mzlt1Q" target="_blank">Mockups - upado por Design Culture</a> </h2>
 					<p>Mockups</p>
 				</div>
-				<a class="resource-button" href="https://mega.nz/#F!uZZ12I7Z!g9TtOZrFAy5pZ_z6Mzlt1Q" target="_blank">Veja</a>
-				<div id="musicas"></div>
+				<a class="resource-button" href="https://mega.nz/#F!uZZ12I7Z!g9TtOZrFAy5pZ_z6Mzlt1Q" target="_blank">Veja</a>				
 			</li>
 
 			<li>
@@ -1360,8 +1358,46 @@
 					<h2> <a href="http://magicmockups.com/" target="_blank">Magic Mockups</a> </h2>
 					<p>Mockups direto no navegador (free) outra alternativa <mark><a href="http://mockdrop.io/" target="_blank">Mockdrop</a></mark></p>
 				</div>
-				<a class="resource-button" href="http://magicmockups.com/" target="_blank">Veja</a>
-				<div id="musicas"></div>
+				<a class="resource-button" href="http://magicmockups.com/" target="_blank">Veja</a>				
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://www.realthread.com/templates" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://www.realthread.com/templates" target="_blank">real Thread</a> </h2>
+					<p>Esse site reúne mockups de roupas no geral. Um diferencial é que você ainda pode personalizar a maioria dos materiais. </p>
+				</div>
+				<a class="resource-button" href="https://www.realthread.com/templates" target="_blank">Veja</a>				
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://freebiesbug.com/psd-freebies/mockups/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://freebiesbug.com/psd-freebies/mockups/" target="_blank">Freebiesbug</a> </h2>
+					<p>Esse site é voltado para interfaces e gadgets.</p>
+				</div>
+				<a class="resource-button" href="https://freebiesbug.com/psd-freebies/mockups/" target="_blank">Veja</a>				
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://www.freemockupworld.com/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://www.freemockupworld.com/" target="_blank">Free Mockup World</a> </h2>
+					<p>Tem uma variedade enorme de mockups</p>
+				</div>
+				<a class="resource-button" href="https://www.freemockupworld.com/" target="_blank">Veja</a>				
 			</li>
 
 			<li>
