Tutorial CSS3 mix-blend-mode

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2641,6 +2641,22 @@
           </h2>
           <p>Developers Google</p>
         </div>
+        <a class="resource-button" href="https://www.hongkiat.com/blog/css3-mix-blend-mode/" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <a href="https://www.hongkiat.com/blog/css3-mix-blend-mode/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://developers.google.com/web/images/web-fundamentals-icon192x192.png" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.hongkiat.com/blog/css3-mix-blend-mode/" target="_blank">
+              How to Display Text on Image With CSS3 mix-blend-mode</a>
+          </h2>
+          <p>Tutorials</p>
+        </div>
         <a class="resource-button" href="https://developers.google.com/web/tools/chrome-devtools/remote-debugging/?utm_source=dcc&utm_medium=redirect&utm_campaign=2016q3" target="_blank">Veja</a>   
       </li>
 
