--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>Robson Designer</title>
 <meta charset="UTF-8" />
 <meta name="msvalidate.01" content="46AF1D64CB3F736072250A24FA9BCB1B" /> <!-- autenticação do bing -->
-<link rel="alternate" href="http://www.robsondesigner.com" hreflang="pt-br" /> <!--tag hreflang para identificar variações de idioma -->
+<link rel="alternate" href="https://www.robsondesigner.com" hreflang="pt-br" /> <!--tag hreflang para identificar variações de idioma -->
 <meta name="keywords" content="Robson Designer, Curitiba, Robson Vinicius, Designer"> <!-- Eu sei que não é mais relevante para o SEO -->
-<meta name="description" content="Robson Designer: Robson Vinicius Designer formado em Design - Bacharelado, cursando Pós-graduação em Administração e Marketing pela Uninter e Pós-Graduação em Aplicativos de Jogos Digitais Game Design e Arte pela Universidade Positivo.">
+<meta name="description" content="Robson Designer: Robson Vinicius Designer formado em Design - Bacharelado, MBA em Administração e Marketing pela Uninter e Pós-Graduado em Aplicativos de Jogos Digitais Game Design e Arte pela Universidade Positivo.">
 <meta name="author" content="Robson Vinicius Designer">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="index, follow">
