hreflang Tags Generator Tool

--- a/my/paginas/seo/index.html
+++ b/my/paginas/seo/index.html
@@ -432,6 +432,21 @@
       </li>
          
       <li>
+        <a href="https://www.aleydasolis.com/english/international-seo-tools/hreflang-tags-generator/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/sitemaps.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.aleydasolis.com/english/international-seo-tools/hreflang-tags-generator/" target="_blank">hreflang</a>
+          </h2>
+          <p>The hreflang Tags Generator Tool</p>
+        </div>
+        <a class="resource-button" href="https://www.aleydasolis.com/english/international-seo-tools/hreflang-tags-generator/" target="_blank">Veja</a>
+      </li>
+         
+      <li>
         <a href="https://www.hotjar.com/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/hotjar.jpg" alt="#" />            
