--- a/my/paginas/seo/index.html
+++ b/my/paginas/seo/index.html
@@ -171,7 +171,7 @@
       <li>
         <a href="https://www.canalip.com/blog/los-mejores-recursos-seo/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/21369656_10156685226770884_5333886775398268788_n.png?_nc_cat=109&oh=8cc1c4aac5f1ee1721cc1eb2ad9e1f44&oe=5C4E6BA8" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/21369656_10156685226770884_5333886775398268788_n.png?_nc_cat=109&_nc_oc=AQmWdQpoD8CSdKAllAfFnvZ5540ut_dixauna4rNBIy8CSve6wbV6UxlI5pDysqoXrU&_nc_ht=scontent.fcwb2-2.fna&oh=22674b3fdac1ceb84ee3b9a357b4222b&oe=5E2907A8" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -186,7 +186,7 @@
       <li>
         <a href="https://morningscore.io/blog/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/27544792_142874476406611_5804344329479977520_n.png?_nc_cat=111&oh=5aeef0706928530ab64bab7d72a94584&oe=5C54E23E" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/27544792_142874476406611_5804344329479977520_n.png?_nc_cat=111&_nc_oc=AQn-um9U9kPa1bXQdbbLeTmXXRCfXy4KsYFiJy5nwtac0pADXQc0x-KMH99ILQJLJMw&_nc_ht=scontent.fcwb2-2.fna&oh=087fa96383eabb8ed8ddd95040a4937f&oe=5E570B3E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
