Logo Morning Score

--- a/my/paginas/seo/index.html
+++ b/my/paginas/seo/index.html
@@ -485,7 +485,7 @@
       <li>
         <a href="https://morningscore.io/seo-glossary/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/27544792_142874476406611_5804344329479977520_n.png?_nc_cat=111&oh=5aeef0706928530ab64bab7d72a94584&oe=5C54E23E" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/27544792_142874476406611_5804344329479977520_n.png?_nc_cat=111&_nc_oc=AQkekb-njGChxXlpucDDuU_sjyI6AFs6LZe4VZ-3RKXDSPENyXHHho9If-oYzfOIpFM&_nc_ht=scontent.fcwb1-1.fna&oh=6a85eb3c2e04e54ba1e8500b86f4b27e&oe=5E570B3E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
