--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -44,7 +44,7 @@
       <li>
         <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/4devs.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
