Indie Hackers logo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -300,7 +300,7 @@
       <li>
         <a href="https://www.indiehackers.com/products" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=2a5746897f23e0a52f8607d3ab0003ba&oe=5D987615" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&_nc_oc=AQmlEV76ClT-7wRG3DRUQtAsoZgDFvmf241k9GFVNiEMcN-Eiqe1i69MoMVBUFtMXIo&_nc_ht=scontent.fbfh14-2.fna&oh=df32a8dee63ef38d7d654a7b2f9f17b5&oe=5E5E3715" alt="#" />
           </div>
         </a>
         <div class="resource-details">
