--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -397,7 +397,7 @@
       <li>
         <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_oc=AQkql5VF8QM8b71hPugnHwqGmicBBz5SaMCbePwmWqepGs6NgcqUDBt4BlHEpebS7no&_nc_ht=scontent.fcwb2-2.fna&oh=32c36ef0f5dec8419f00d4c7581de0da&oe=5D7BB7BF" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_oc=AQmDOoTzL_wS1h8NWZNmtsDfnu3WL9FEu8nBm-dvlvkB3IZVgud1gjoQeknlvNHYuXQ&_nc_ht=scontent.fbfh14-2.fna&oh=d66980993f73cd24917f90c247d8cf44&oe=5E4C0D64" alt="#" />
           </div>
         </a>
         <div class="resource-details">
