--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -694,7 +694,7 @@
       <li>
         <a href="https://reactjs.org/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/1010076_477783955633350_1900224762_n.png?_nc_cat=109&_nc_oc=AQncB-3nV8LpX1ABZmH9hMPL5gfGvnfZW_mIb3Ih-0opUU-qgzrfTAAbcAQblYKYlXM&_nc_ht=scontent.fcwb2-2.fna&oh=228a282a1f0e459a4684d46105a1136b&oe=5D5697F5" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/1010076_477783955633350_1900224762_n.png?_nc_cat=109&_nc_oc=AQlQlEvDe7CxBX_kxAxhR8RnOTDC12FLndTw2jFM9z_NcEz1JLONJjGQb2H_MAgaFSs&_nc_ht=scontent.fbfh14-2.fna&oh=dd5c25e6f53f2e5e85274e5055169733&oe=5E43E5F5" alt="#" />
           </div>
         </a>
         <div class="resource-details">
