Nucleo app logo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1086,7 +1086,7 @@
       <li>
         <a href="https://nucleoapp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&_nc_oc=AQmbPi50ELD6rEmjSVlLG7Z7j17tXymBMeWmRfpSd25LrLNXvZ7In24VVIUvGQYGzD4&_nc_ht=scontent.fcwb2-2.fna&oh=17ba46004c73aef53462a93bedd5b96f&oe=5DC0ECB6" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&_nc_oc=AQkYh6n5sZQ6jgJv-p574kws9djnvf1x5HdQtDzCK1GChHUIvisoPNpz9OMLowN-EKs&_nc_ht=scontent.fbfh14-2.fna&oh=75f20767243a9b2673f8e29813c85ceb&oe=5E4FAF10" alt="#" />
           </div>
         </a>
         <div class="resource-details">
