Web Design Ledger

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2351,7 +2351,7 @@
       <li>
         <a href="https://webdesignledger.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&_nc_ht=scontent.fcwb2-2.fna&oh=f23563d9666e658e6c405dfa44531630&oe=5D3505C5" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&_nc_oc=AQm4sNZp-RYXGmD-x0ZC0ittLqu9dupT0T7FYtVwYHTczsC3ypZDnfqjnZ5-c79_VtU&_nc_ht=scontent.fbfh14-2.fna&oh=21206c028839303bf4c90a5a0b8085ec&oe=5E49E0C5" alt="#" />
           </div>
         </a>
         <div class="resource-details">
