code signal logo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2366,7 +2366,7 @@
       <li>
         <a href="https://codesignal.com/blog/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=b5fbc9517d5cbe9d5ba062a5488cc130&oe=5D682D7E" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&_nc_oc=AQlDLgUMut7jMAwNj345vZljD0Z90x9K-6G846UIyrenC27iKBXEte-bn5Q_WoQQ5As&_nc_ht=scontent.fbfh14-2.fna&oh=77e5a6f36ff1afa8a1c875c266348085&oe=5E557B7E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
