--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2411,7 +2411,7 @@
       <li>
         <a href="https://cssauthor.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&_nc_ht=scontent.fcwb1-1.fna&oh=27b100929e30c6bba6b59d59a1bd546b&oe=5D67ACF3" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&_nc_oc=AQli5vK9se0f2VnmqvhiZgcTeSxD3ejdP-J9P0PzENnLkHUgBK87mUKMH1-gxFI9HRg&_nc_ht=scontent.fbfh14-1.fna&oh=ea4ca11e1134a5b26a5bdbdd9fa77a89&oe=5E54FAF3" alt="#" />
           </div>
         </a>
         <div class="resource-details">
