--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3066,7 +3066,7 @@
       <li>
         <a href="https://channel9.msdn.com/Blogs/mcpexamprep/70-480-Programming-in-HTML5-with-JavaScript-and-CSS3" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/11391192_10153341290009231_4873638384574170064_n.png?_nc_cat=105&_nc_ht=scontent.fcwb2-1.fna&oh=2e34f4874e235605089c828bd5d19567&oe=5C6C7C92" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t31.0-1/p320x320/11227666_10153341290009231_4873638384574170064_o.png?_nc_cat=105&_nc_oc=AQlGofUg5uKWb5dngjKAFbdS4Y3Qh-MXixqaTLjli6t_v_0auiJN1PjmemtaM4hnbAw&_nc_ht=scontent.fbfh14-2.fna&oh=944dca5119ddd0ac9f1c506ea5e126af&oe=5E4ADB7A" alt="#" />
           </div>
         </a>
         <div class="resource-details">
