free code camp logo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2699,7 +2699,7 @@
       <li>
         <a href="https://learn.freecodecamp.org" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/692531829287567360/ytP7U362_400x400.png" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/12439144_1738400546393339_7527358456954625324_n.png?_nc_cat=105&_nc_oc=AQnEUDdQy2byDPeETIAaxe5NW5jNs0TSz758p7GbVyFNs_EHa_LSDQ-8mSqG27fhtiY&_nc_ht=scontent.fbfh14-2.fna&oh=da5170321b782349313e13f1932825ca&oe=5E5C3CFF" alt="#" />
           </div>
         </a>
         <div class="resource-details">
