Web Designer Depot

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2381,7 +2381,7 @@
       <li>
         <a href="https://www.webdesignerdepot.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&_nc_ht=scontent.fcwb1-1.fna&oh=056e57222a01d94b05d5ca993ce246fa&oe=5D666629" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&_nc_oc=AQkMHpog-bOQJx2R4Jq_JvnnadO_PG43VnlM2BDenQ1VeMGVd4_gHtjAan6uljqPk7I&_nc_ht=scontent.fbfh14-2.fna&oh=34289826612bd43047d4ba2f6164eb31&oe=5E53B429" alt="#" />
           </div>
         </a>
         <div class="resource-details">
