--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2759,7 +2759,7 @@
       <li>
         <a href="https://www.caelum.com.br/apostilas" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_ht=scontent.fcwb2-2.fna&oh=a325507ca5725382369db76213a819f4&oe=5D7333FE" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_ohc=RRL_gZKh5YcAQlopUzKMowtuiA_ljFo9S8rwLs1VvpgAPp1_m64nGSInA&_nc_ht=scontent.fcwb2-2.fna&oh=594ec7e9c954df083a733b5fcb5df828&oe=5E4C0D64" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -2924,7 +2924,7 @@
       <li>
         <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=e200858573fddb4d72925e31735d77b2&oe=5D5AFE5D" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&_nc_ohc=9uEgaNC8ML0AQkbaNir_BLAz7tyslXaHdu2ImKE47tE5qHxLRWU8MpKHg&_nc_ht=scontent.fcwb2-1.fna&oh=55bcdd3db7865030942981de0b9aaa68&oe=5E484C5D" alt="#" />
           </div>
         </a>
         <div class="resource-details">
