Blog Designr - Focado em UX

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -452,6 +452,21 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <a class="resource-button" href="http://mwpt.com.br/novidades/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="http://designr.com.br/?fbclid=IwAR3-4oAwvDDUhfCqm2WCyaeooDTaaKac-blMsM_dfMdIR7S3-nuHTidQh2M" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://designr.com.br/?fbclid=IwAR3-4oAwvDDUhfCqm2WCyaeooDTaaKac-blMsM_dfMdIR7S3-nuHTidQh2M" target="_blank">Designr</a>
+          </h2>
+          <p>Focado em UX</p>
+        </div>
+        <a class="resource-button" href="http://designr.com.br/?fbclid=IwAR3-4oAwvDDUhfCqm2WCyaeooDTaaKac-blMsM_dfMdIR7S3-nuHTidQh2M" target="_blank">Veja</a>
+      </li>
       
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Blogs Internacionais</h2>
