Pre-processors - Sass and Less

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1141,6 +1141,41 @@
           <p>Simply Delightful Icon System</p>
         </div>
         <a class="resource-button" href="https://remixicon.com/" target="_blank">Veja</a>        
+        <div id="pre-processors"></div>
+      </li>  
+
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-frontend">Pre-processors</h2>
+      <div class="linha"></div>
+      
+      <li>
+        <a href="https://sass-lang.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://sass-lang.com/" target="_blank">Sass</a>
+          </h2>
+          <p>CSS With superpowers</p>
+        </div>
+        <a class="resource-button" href="https://sass-lang.com/" target="_blank">Veja</a>
+      </li>  
+
+      <li>
+        <a href="http://lesscss.org/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://lesscss.org/" target="_blank">Less</a>
+          </h2>
+          <p>It's CSS, with just a little more.</p>
+        </div>
+        <a class="resource-button" href="http://lesscss.org/" target="_blank">Veja</a>        
         <div id="hospedagem"></div>
       </li>  
 
@@ -3280,6 +3315,7 @@
       <li><a class="scroll" href="#animacoes">Animações</a></li>
       <li><a class="scroll" href="#zoom">Zoom | Popup</a></li> 
       <li><a class="scroll" href="#icones">Ícones</a></li>      
+      <li><a class="scroll" href="#pre-processors">Pre-processors</a></li>      
       <li><a class="scroll" href="#hospedagem">Hospedagem</a></li>      
       <li><a class="scroll" href="#bancos">Banco de Dados</a></li>      
       <li><a class="scroll" href="#documentacao">Documentações</a></li>
