--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -48,7 +48,7 @@
       <li>
         <a href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_ohc=SHUlJpXvYjAAQl89I-m9NKEZ6U6mbsOPR-29AmwHk4y-RIFK2K3srGpLw&_nc_ht=scontent.fcwb2-2.fna&oh=b72ebddb54d6fc87647c011134aba08a&oe=5DDD8285" alt="#" />          
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_ohc=Z4y0HKgzjGcAQnPfRXFvb9bhgXpzIfVLz7ajzWYsa4vBRcFyK1bW0pnBw&_nc_ht=scontent.fbfh14-2.fna&oh=07b507f0b3ae6297b9a4dde75575b595&oe=5DE61445" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -58,6 +58,21 @@
           <p>Human Interface Guidelines - Apple Developer | <mark><a href="https://developer.apple.com/design/human-interface-guidelines/ios/bars/tab-bars/" target="_blank">Tab Bars</a></mark></p>
         </div>
         <a class="resource-button" href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <a href="https://ant.design/ " target="_blank">
+          <div class="resource-icon">
+            <img src="https://pbs.twimg.com/profile_images/938972621432950785/IlLvcIX6_400x400.jpg" alt="#" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://ant.design/ " target="_blank">Ant Design</a>
+          </h2>
+          <p>A design system with values of Nature and Determinacy for better user experience of enterprise applications</p>
+        </div>
+        <a class="resource-button" href="https://ant.design/ " target="_blank">Veja</a>
       </li>
 
       <div class="linha"></div>
