atualização logo windows

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3011,7 +3011,7 @@
       <li>
         <a href="https://www.microsoft.com/pt-br/learning/exam-70-480.aspx" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/46507920_10156240849307669_8568003075942383616_n.png?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=4d2834c53d49f7d59e1d649e9913e779&oe=5C6BB68B" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/48379077_1857402604368250_4972068830084857856_n.png?_nc_cat=1&_nc_ohc=GGre7uAWmVIAQmsaEnxmqK_e6Bgr-qAyv897c2cZ1wN0jdheW7WNXZvEQ&_nc_ht=scontent.fbfh14-1.fna&oh=31b31c8c9eb3c6a1aabd5c6134b2a609&oe=5E834367" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -3026,7 +3026,7 @@
       <li>
         <a href="https://mva.microsoft.com/pt-br/training-courses/introduo-rpida-ao-desenvolvimento-em-html5-com-javascript-e-css3-8223?l=AJoPBmRiB_9300115888" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/46507920_10156240849307669_8568003075942383616_n.png?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=4d2834c53d49f7d59e1d649e9913e779&oe=5C6BB68B" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/48379077_1857402604368250_4972068830084857856_n.png?_nc_cat=1&_nc_ohc=GGre7uAWmVIAQmsaEnxmqK_e6Bgr-qAyv897c2cZ1wN0jdheW7WNXZvEQ&_nc_ht=scontent.fbfh14-1.fna&oh=31b31c8c9eb3c6a1aabd5c6134b2a609&oe=5E834367" alt="#" />
           </div>
         </a>
         <div class="resource-details">
