Clube do Design logo

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -349,7 +349,7 @@
 		  <li>
         <div class="resource-icon">
           <a href="https://clube.design/2014/configurando-sangria-e-margem-de-seguranca-illustrator-indesign-photoshop-e-coreldraw/?utm_source=ReviveOldPost&utm_medium=social&utm_campaign=ReviveOldPost" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/16729032_1187196768015149_277613555798987253_n.png?_nc_cat=0&oh=969c844a71e1478ed650ab9462198750&oe=5BEEAF1B" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/47278516_1895916400476512_5691170565889458176_n.png?_nc_cat=100&_nc_ohc=P9UI5NZCN0sAQn9rlocAEDh4BNAGfI2xYhojT-eIjQ4ybi9CD84oc2PDA&_nc_ht=scontent.fcwb2-2.fna&oh=1d02d2df3ebf2ad91e6e87c1944f517c&oe=5E41A55E" alt="#" />
           </a>
         </div>
         <div class="resource-details">
