Design Culture logo

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -610,7 +610,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://designculture.com.br/acabe-seus-problemas-com-conversoes-de-cores/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/23561593_1921177074564506_2198188356803910177_n.png?_nc_cat=0&oh=01b952c4efc94784d64a26f231dfcc71&oe=5C2E1FA5" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p200x200/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_ohc=0juuoC-fNTAAQl8DFtuhGDfg2pHbwDCrnk2AQnIZ-u0bcRO8CQk1npOpw&_nc_ht=scontent.fbfh14-2.fna&oh=cf7175b471dce263a7dd140f639fb4a4&oe=5E8AB10E" alt="#" />
           </a>
         </div>
         <div class="resource-details">
