Hi Clipart - A community for designers to share & download transparent background PNG cliparts

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1027,8 +1027,7 @@
 					<h2> <a href="https://picjumbo.com/" target="_blank">Picjumbo</a> </h2>
 					<p>Banco de Imagem</p>
 				</div>
-				<a class="resource-button" href="https://picjumbo.com/" target="_blank">Veja</a>
-				
+				<a class="resource-button" href="https://picjumbo.com/" target="_blank">Veja</a>				
 			</li>
 
 			<li>
@@ -1041,8 +1040,20 @@
 					<h2> <a href="https://drive.google.com/drive/folders/0BwogYDe2deuddFRkXzNFY05nanM" target="_blank">84Gb de imagens free</a> </h2>
 					<p>Imagens upadas</p>
 				</div>
-				<a class="resource-button" href="https://drive.google.com/drive/folders/0BwogYDe2deuddFRkXzNFY05nanM" target="_blank">Veja</a>
-				
+				<a class="resource-button" href="https://drive.google.com/drive/folders/0BwogYDe2deuddFRkXzNFY05nanM" target="_blank">Veja</a>				
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://www.hiclipart.com/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="#" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://www.hiclipart.com/" target="_blank">HiClipart</a></h2>
+					<p>A community for designers to share & download transparent background PNG cliparts</p>
+				</div>
+				<a class="resource-button" href="https://www.hiclipart.com/" target="_blank">Veja</a>				
 			</li>
 
 			<div id="texturas"></div>
