--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1264,7 +1264,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.designculture.com.br/10-boxes-planificadas-em-eps-totalmente-gratis-1" target="_blank">
-						<img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/7e15a89515ca5c1ff8b5895a6a22e56b/5D45BFDE/t51.2885-19/s320x320/42643955_471879746640274_4168137019123302400_n.jpg?_nc_ht=instagram.fcwb1-1.fna.fbcdn.net" alt="Retro Vectors" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p200x200/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_ohc=0juuoC-fNTAAQnVFh2Dr_sLKFP35eF3dGqWcOknflrz_WhubpHRoREfBw&_nc_ht=scontent.fbfh14-2.fna&oh=9c6aade2df66427df3f7b4a97a3e9c9a&oe=5E8AB10E" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1780,7 +1780,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://makeagif.com/" target="_blank">
-						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&_nc_ht=scontent.fcwb1-1.fna&oh=9131966fed499519a20a7b277e918648&oe=5D481965" alt="Retro Vectors" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&_nc_ohc=EoM6yFEeiRYAQkEdz4urZd-nyqb1Segm6XQhhLNbYxWV1qCXTKcbqk9Uw&_nc_ht=scontent.fbfh14-2.fna&oh=51390e2fe1132dfe3a27d88f4eea95bd&oe=5E848165" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1887,7 +1887,7 @@
 			<li>
 				<a href="https://cursos.timtec.com.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb1-1.fna&oh=530635e0c5fa9a2066f7bd8d40dccbcc&oe=5D3FD7A1" alt="Cursos" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ohc=8Mkh6v7pH2oAQnRtK_bK6LZGCWY7r-Glt9MnI-bNbCaMBo0CwD4OnDpig&_nc_ht=scontent.fbfh14-2.fna&oh=71a0300c142eddec496bd2d1600962e2&oe=5E7C3FA1" alt="Cursos" />
 					</div>
 				</a>
 				<div class="resource-details">
