Curso em Video logo

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1900,7 +1900,7 @@
 			<li>
 				<a href="https://www.cursoemvideo.com" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/10801772_791822567553733_6114747510190883788_n.png?_nc_cat=111&_nc_ht=scontent.fcwb1-1.fna&oh=b522da327d19636ec003f7e9d53a6958&oe=5D3A5045" alt="Cursos" />					
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/61690540_2233291130073529_4797694330393329664_o.jpg?_nc_cat=108&_nc_ohc=VjtTSjJMllUAQn52AWhYkMHA1aEZeloMZHbqwfwuQcUGyW-JbpnuXy1XA&_nc_ht=scontent.fbfh14-1.fna&oh=367363356a0da680bd716db0b4c278c9&oe=5E6C9323" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
