--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1913,7 +1913,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://alison.com/courses" target="_blank">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_oc=AQkX3wgrACT0PNOw0lmNWQt6uF-6RexIiqMXcTw4DwzP5bWSbR3GW2tDjThWoGmM-mg&_nc_ht=scontent.fcwb2-2.fna&oh=1d9a8c6fe1c51ed46b87f46f5bcecea1&oe=5DBF477E" alt="Cursos" />
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p200x200/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_ohc=HU7p_dbs-hQAQm2fS-DSLzIJLkgE3rFdv1_c4BAausAWYOijguhhjkJhg&_nc_ht=scontent.fbfh14-1.fna&oh=321bccc42cb2561f0c224b5615a423c1&oe=5E764D92" alt="Cursos" />
 					</a>
 				</div>
 				<div class="resource-details">
