--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1926,7 +1926,7 @@
 			<li>
 				<a href="https://www.learncafe.com/cursos" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_oc=AQnUrgIzcKLNbljCHKXVbGeCF9zO9Gd65YEv5bEiWu7E3UVKOUqL9Qu_0elyzK-Hs-A&_nc_ht=scontent.fcwb2-2.fna&oh=2ba8c22a26cfdfd17d82881fac38539f&oe=5DC2D71E" alt="Cursos" />					
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p200x200/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_ohc=MId738n-DJIAQnk3keAbRHp-7SJMjAQYylbT6BvT3B9TpeDt846Sj44wQ&_nc_ht=scontent.fbfh14-1.fna&oh=c1c07a8e69228ed471ac388b0fd4f621&oe=5E88981E" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
