--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -641,7 +641,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://blog.prototypr.io/10-basic-principles-of-visual-design-55b86b9f7241" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/22780187_1488936231185240_2922059926549942903_n.png?_nc_cat=102&oh=6d3b9903bdd2066c494c535ac6db26a7&oe=5C521AFA" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t31.0-1/p320x320/22713292_1488936231185240_2922059926549942903_o.png?_nc_cat=102&_nc_ohc=5cieCimFxg0AQnKCKtEDbiZ8Bkg6Rk8MHm1wMhsUPoTVX3vGcfvYtk2qw&_nc_ht=scontent.fbfh14-1.fna&oh=9300fe31d5e9174933a9a096cc88789e&oe=5E7FB16C" alt="#" />
           </a>
         </div>
         <div class="resource-details">
