--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -908,7 +908,7 @@ Ilustração Digital</a>
       <li>
         <div class="resource-icon">
           <a href="https://www.guiacommarketing.com.br/blog/15-ferramentas-de-design-grafico-on-line/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/21740467_345116605934990_5313718681359379297_n.jpg?_nc_cat=111&oh=96b0df17c25b25c9640aed6cb780074d&oe=5C521D67" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/47350876_564042494042399_6915279564289605632_n.jpg?_nc_cat=104&_nc_ohc=IyO_untDA-AAQkJe_u3VzbOTs3HFuNqJO8BwKsnZVkuY7S0GHkILe_7YQ&_nc_ht=scontent.fbfh14-2.fna&oh=4194c8f2fac8cb9670c0a7b2e49dfd1b&oe=5E67C09D" alt="#" />
           </a>
         </div>
         <div class="resource-details">
