Strawpoll - para fazer votação

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -143,7 +143,7 @@
       <li>
         <a href="https://www.strawpoll.me/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_oc=AQlZgVBeatwrHgY-Fc1TPg_uTqa0XxvSQO2tttlk-T6R9H-jW6EG6_d0Io-JquVUfUY&_nc_ht=scontent.fcwb1-1.fna&oh=a1da16c34b64b743835a3e4c107f1871&oe=5D55CE16" alt="#" />          
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_ohc=_hn2tUguDUkAQmv10jTjxfqu5JWIODixwC2eAa0ahslO2qINKowvtQINw&_nc_ht=scontent.fbfh14-2.fna&oh=cb843a32e6654e8d375973d4213991e4&oe=5E6AA916" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
