logo Homem Máquina e Web para todos

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -441,7 +441,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://www.homemmaquina.com.br/nosso-blog/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/19732335_1728054027227684_7049148692975079195_n.png?_nc_cat=104&_nc_oc=AQm2BghLiVTGHjFzcY_4W2Ho6tkIV7nPmdeBhdNshzzjp-lwn0war8jnbbXxzGi9D2g&_nc_ht=scontent.fcwb2-1.fna&oh=047ae78638b9efb06899ec0827bbc76f&oe=5DB8D84E" alt="#" />
+            <img src="../../base/images/homemmaquina.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -456,7 +456,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="http://mwpt.com.br/novidades/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/21751273_1587811881286037_3244959824989961902_n.png?_nc_cat=106&_nc_oc=AQlFe2n-IPmoAQAg6rjgbwiBjZ4eS4DZlsSCqk8nynQ-9_9UqTWBaW0SvpXPH1zfje8&_nc_ht=scontent.fcwb2-1.fna&oh=6a58dddec73922e5586221a196fa7741&oe=5DC61349" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t31.0-1/p320x320/21741098_1587811881286037_3244959824989961902_o.png?_nc_cat=106&_nc_ohc=_4bNIiH5Ov0AQkEvSxzgzZEdr8XSpHtBj2kuQ6wwEhvjMTtrKTvF0wSaA&_nc_ht=scontent.fcwb1-1.fna&oh=2207ebacc4a3c3a286351512fb9e0aea&oe=5E78B6D9" alt="#" />
           </a>
         </div>
         <div class="resource-details">
