--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -564,17 +564,17 @@ and share your amazing creations in a matter of minutes.</p>
       
       <li>
         <div class="resource-icon">
-          <a href="https://goodui.org/home.php" target="_blank">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/e720eee3e93c4b11e5576886ac8a619d/5C236BCF/t51.2885-19/s150x150/12237494_442003032657186_55213410_a.jpg" alt="#" />
+          <a href="https://goodui.org/?fbclid=IwAR0oZ-rwbatKojwCKwfaGMy4XbgkcJIK496FJ-zUATQsBwubkd5KaH--dVs" target="_blank">
+            <img src="../../base/images/GoodUI.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://goodui.org/home.php" target="_blank">Goodui</a>
+            <a href="https://goodui.org/?fbclid=IwAR0oZ-rwbatKojwCKwfaGMy4XbgkcJIK496FJ-zUATQsBwubkd5KaH--dVs" target="_blank">Goodui</a>
           </h2>
           <p>Blog</p>
         </div>
-        <a class="resource-button" href="https://goodui.org/home.php" target="_blank">Veja</a>
+        <a class="resource-button" href="https://goodui.org/?fbclid=IwAR0oZ-rwbatKojwCKwfaGMy4XbgkcJIK496FJ-zUATQsBwubkd5KaH--dVs" target="_blank">Veja</a>
       </li>      
       
       <li>
