Logo Usability Geek, UX Mastery

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -595,7 +595,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://usabilitygeek.com/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/1456709_543038692446114_1751168257_n.png?_nc_cat=0&oh=10cc95be963dd1d191de88b22b4a53ef&oe=5C35E9D7" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/1456709_543038692446114_1751168257_n.png?_nc_cat=107&_nc_ohc=9Ad23RY0NOUAQljhMuGKqUEeqDUUzQ78eDAOvcwugBU_gfkSSbq9F1T_g&_nc_ht=scontent.fbfh14-1.fna&oh=157d8343c842a3e6c9b8ff2447ec1dea&oe=5EAEB9D7" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -610,7 +610,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://uxmastery.com/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/c7.0.320.320/p320x320/10445968_940408919350826_6743417754018838516_n.png?_nc_cat=0&oh=2ad2d1b1c8015176b2cfa59515425849&oe=5C237317" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/c7.0.320.320a/p320x320/10445968_940408919350826_6743417754018838516_n.png?_nc_cat=101&_nc_ohc=otJaCQQ_T5QAQmS-git_m564pqMKox7IRnAkrHATfOINjdVkB_seToyew&_nc_ht=scontent.fbfh14-1.fna&oh=cea26d6c69a681c76a3613066e2f8bc8&oe=5E731D79" alt="#" />
           </a>
         </div>
         <div class="resource-details">
