--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -752,6 +752,22 @@
         <a class="resource-button" href="https://svelte.dev/" target="_blank">Veja</a>     
         <div id="animacoes"></div>   
       </li>      
+      
+      <li>
+        <a href="https://flutter.dev/docs/get-started/install/windows" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/65419052_2371703836487452_7459811366505807872_o.png?_nc_cat=104&_nc_ohc=ZbN8cH9i9QMAQlj9hk8gMAKBduyjtoDftjFZMOSqoQmjOZrTWutHE90Og&_nc_ht=scontent.fbfh14-2.fna&oh=c34eac168e6ff9efea6fffc0ea215929&oe=5EB3AD1A" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://flutter.dev/docs/get-started/install/windows" target="_blank">Flutter</a>
+          </h2>
+          <p>Flutter is Google’s UI toolkit for building beautiful</p>
+        </div>
+        <a class="resource-button" href="https://flutter.dev/docs/get-started/install/windows" target="_blank">Veja</a>     
+        <div id="animacoes"></div>   
+      </li>      
 
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">Animações</h2>
