Logo Design Mão de Vaca

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -216,7 +216,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://designermaodevaca.com/categoria/post" target="_blank">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/34637619_2177931402223176_3927455611725283328_n.png?_nc_cat=100&_nc_oc=AQncsh384cVMa1evGWrg6lc0XMEaY_JylezEYMW4p5McZMwUuSkqU74ebBndN28n6iw&_nc_ht=scontent.fcwb2-2.fna&oh=9805a8dfc4e297631dd95b02246c033f&oe=5DF32303" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/34532208_2177931398889843_1389285009583505408_o.png?_nc_cat=109&_nc_ohc=2GOkQoLsT6wAQl8It__GsdTMkRPzOUNfI18gcb0cXte0pfRRAOoXh0p4w&_nc_ht=scontent.fbfh14-2.fna&oh=eb664cfebd985278f58a35a7810b6003&oe=5E740A67" alt="#" />
           </a>
         </div>
         <div class="resource-details">
